--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,33 @@ img {
 	transform: translateY(-15px);
 }
 
+/* Features */
+.features-head img {
+	width: 200px;
+	justify-self: flex-end;
+}
+
+.features-sub-head img {
+	width: 300px;
+	justify-self: flex-end;
+}
+
+.features-main .card > i {
+	margin-right: 20px;
+}
+
+.features-main .grid {
+	padding: 30px;
+}
+
+.features-main .grid > *:first-child {
+	grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2) {
+	grid-column: 1 / span 2;
+}
+
 /* Footer */
 .footer .grid-3 > :not(:nth-child(2)) {
 	text-align: center;
@@ -206,4 +233,64 @@ img {
 
 .footer .social a {
 	margin: 0 10px;
+}
+
+.footer .social a i {
+	transition: transform 0.2s ease-in;
+}
+
+.footer .social a i:hover {
+	transform: translateY(-5px);
+}
+
+/* Media Queries */
+/* Tablets and under */
+@media (max-width: 768px) {
+	.grid,
+	.showcase .grid,
+	.stats .grid,
+	.cli .grid {
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr;
+	}
+
+	.cloud .grid {
+		grid-template-columns: minmax(200px, 400px);
+		grid-template-rows: 1fr;
+	}
+
+	.showcase {
+		height: auto;
+	}
+
+	.showcase-text {
+		text-align: center;
+		margin-top: 40px;
+	}
+
+	.showcase-form {
+		justify-self: center;
+		margin: auto;
+	}
+
+	.cli .grid > *:first-child {
+		grid-column: 1;
+		grid-row: 1;
+	}
+}
+
+/* Mobile */
+@media (max-width: 500px) {
+	.navbar {
+		height: 110px;
+	}
+
+	.navbar .flex {
+		flex-direction: column;
+	}
+
+	.navbar ul {
+		padding: 10px;
+		background-color: rgba(0, 0, 0, 0.1);
+	}
 }
