--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ pre {
 	overflow: visible;
 }
 
+.showcase-text {
+	animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
 	position: relative;
 	top: 60px;
@@ -107,6 +111,7 @@ pre {
 	padding: 40px;
 	z-index: 100;
 	justify-self: flex-end;
+	animation: slideInFromRight 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -144,6 +149,7 @@ pre {
 /* Stats */
 .stats {
 	padding-top: 100px;
+	animation: slideInFromBottom 1s ease-in;
 }
 
 .stats-heading {
@@ -274,13 +280,56 @@ pre {
 	transform: translateY(-5px);
 }
 
+/* Animations */
+@keyframes slideInFromLeft {
+	0% {
+		transform: translateX(-100%);
+	}
+
+	100% {
+		transform: translateX(0%);
+	}
+}
+
+@keyframes slideInFromRight {
+	0% {
+		transform: translateX(100%);
+	}
+
+	100% {
+		transform: translateX(0%);
+	}
+}
+
+@keyframes slideInFromTop {
+	0% {
+		transform: translateY(-100%);
+	}
+
+	100% {
+		transform: translateX(0%);
+	}
+}
+
+@keyframes slideInFromBottom {
+	0% {
+		transform: translateY(100%);
+	}
+
+	100% {
+		transform: translateX(0%);
+	}
+}
+
 /* Media Queries */
 /* Tablets and under */
 @media (max-width: 768px) {
 	.grid,
 	.showcase .grid,
 	.stats .grid,
-	.cli .grid {
+	.cli .grid,
+	.features-main .grid,
+	.docs-main .grid {
 		grid-template-columns: 1fr;
 		grid-template-rows: 1fr;
 	}
@@ -297,16 +346,35 @@ pre {
 	.showcase-text {
 		text-align: center;
 		margin-top: 40px;
+		animation: slideInFromTop 1s ease-in;
 	}
 
 	.showcase-form {
 		justify-self: center;
 		margin: auto;
+		animation: slideInFromBottom 1s ease-in;
 	}
 
 	.cli .grid > *:first-child {
 		grid-column: 1;
 		grid-row: 1;
+	}
+
+	.features-head,
+	.features-sub-head,
+	.docs-head {
+		text-align: center;
+	}
+
+	.features-head img,
+	.features-sub-head img,
+	.docs-head img {
+		justify-self: center;
+	}
+
+	.features-main .grid > *:first-child,
+	.features-main .grid > *:nth-child(2) {
+		grid-column: 1;
 	}
 }
 
